--- a/lib/Support/CMakeLists.txt
+++ b/lib/Support/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(Support
               Debug.cpp
+              Error.cpp
               Random.cpp
               Support.cpp)
 target_link_libraries(Support
